ggwave_ffi/lib/ggwave_ffi_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/ggwave_ffi.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class GgwaveFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  GgwaveFfiBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  GgwaveFfiBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Initialize a new ggwave instance
  /// Returns instance ID or -1 on error
  int ggwave_ffi_init(
    double sampleRateInp,
    double sampleRateOut,
    int samplesPerFrame,
    int sampleFormatInp,
    int sampleFormatOut,
    int operatingMode,
  ) {
    return _ggwave_ffi_init(
      sampleRateInp,
      sampleRateOut,
      samplesPerFrame,
      sampleFormatInp,
      sampleFormatOut,
      operatingMode,
    );
  }

  late final _ggwave_ffi_initPtr =
      _lookup<
        ffi.NativeFunction<
          GGWaveInstance Function(
            ffi.Float,
            ffi.Float,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('ggwave_ffi_init');
  late final _ggwave_ffi_init = _ggwave_ffi_initPtr
      .asFunction<int Function(double, double, int, int, int, int)>();

  /// Free a ggwave instance
  void ggwave_ffi_free(int instance) {
    return _ggwave_ffi_free(instance);
  }

  late final _ggwave_ffi_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(GGWaveInstance)>>(
        'ggwave_ffi_free',
      );
  late final _ggwave_ffi_free = _ggwave_ffi_freePtr
      .asFunction<void Function(int)>();

  /// Encode data into audio waveform
  /// Returns number of bytes written to waveformBuffer, or -1 on error
  /// If waveformBuffer is NULL, returns the required buffer size
  int ggwave_ffi_encode(
    int instance,
    ffi.Pointer<ffi.Uint8> payload,
    int payloadSize,
    int protocol,
    int volume,
    ffi.Pointer<ffi.Uint8> waveformBuffer,
    int waveformBufferSize,
  ) {
    return _ggwave_ffi_encode(
      instance,
      payload,
      payloadSize,
      protocol,
      volume,
      waveformBuffer,
      waveformBufferSize,
    );
  }

  late final _ggwave_ffi_encodePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            GGWaveInstance,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
          )
        >
      >('ggwave_ffi_encode');
  late final _ggwave_ffi_encode = _ggwave_ffi_encodePtr
      .asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
        )
      >();

  /// Decode audio waveform
  /// Returns number of bytes decoded into payloadBuffer, 0 if no message yet, or -1 on error
  int ggwave_ffi_decode(
    int instance,
    ffi.Pointer<ffi.Uint8> waveformBuffer,
    int waveformSize,
    ffi.Pointer<ffi.Uint8> payloadBuffer,
    int payloadBufferSize,
  ) {
    return _ggwave_ffi_decode(
      instance,
      waveformBuffer,
      waveformSize,
      payloadBuffer,
      payloadBufferSize,
    );
  }

  late final _ggwave_ffi_decodePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            GGWaveInstance,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
          )
        >
      >('ggwave_ffi_decode');
  late final _ggwave_ffi_decode = _ggwave_ffi_decodePtr
      .asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
        )
      >();

  /// Get the default sample rate
  double ggwave_ffi_get_default_sample_rate() {
    return _ggwave_ffi_get_default_sample_rate();
  }

  late final _ggwave_ffi_get_default_sample_ratePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
        'ggwave_ffi_get_default_sample_rate',
      );
  late final _ggwave_ffi_get_default_sample_rate =
      _ggwave_ffi_get_default_sample_ratePtr.asFunction<double Function()>();

  /// Get the default samples per frame
  int ggwave_ffi_get_default_samples_per_frame() {
    return _ggwave_ffi_get_default_samples_per_frame();
  }

  late final _ggwave_ffi_get_default_samples_per_framePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
        'ggwave_ffi_get_default_samples_per_frame',
      );
  late final _ggwave_ffi_get_default_samples_per_frame =
      _ggwave_ffi_get_default_samples_per_framePtr.asFunction<int Function()>();
}

/// Protocol IDs - must match ggwave_ProtocolId
enum GGWaveProtocol {
  PROTOCOL_AUDIBLE_NORMAL(0),
  PROTOCOL_AUDIBLE_FAST(1),
  PROTOCOL_AUDIBLE_FASTEST(2),
  PROTOCOL_ULTRASOUND_NORMAL(3),
  PROTOCOL_ULTRASOUND_FAST(4),
  PROTOCOL_ULTRASOUND_FASTEST(5),
  PROTOCOL_DT_NORMAL(6),
  PROTOCOL_DT_FAST(7),
  PROTOCOL_DT_FASTEST(8),
  PROTOCOL_MT_NORMAL(9),
  PROTOCOL_MT_FAST(10),
  PROTOCOL_MT_FASTEST(11);

  final int value;
  const GGWaveProtocol(this.value);

  static GGWaveProtocol fromValue(int value) => switch (value) {
    0 => PROTOCOL_AUDIBLE_NORMAL,
    1 => PROTOCOL_AUDIBLE_FAST,
    2 => PROTOCOL_AUDIBLE_FASTEST,
    3 => PROTOCOL_ULTRASOUND_NORMAL,
    4 => PROTOCOL_ULTRASOUND_FAST,
    5 => PROTOCOL_ULTRASOUND_FASTEST,
    6 => PROTOCOL_DT_NORMAL,
    7 => PROTOCOL_DT_FAST,
    8 => PROTOCOL_DT_FASTEST,
    9 => PROTOCOL_MT_NORMAL,
    10 => PROTOCOL_MT_FAST,
    11 => PROTOCOL_MT_FASTEST,
    _ => throw ArgumentError("Unknown value for GGWaveProtocol: $value"),
  };
}

/// Sample format IDs
enum GGWaveSampleFormat {
  SAMPLE_FORMAT_U8(1),
  SAMPLE_FORMAT_I8(2),
  SAMPLE_FORMAT_U16(3),
  SAMPLE_FORMAT_I16(4),
  SAMPLE_FORMAT_F32(5);

  final int value;
  const GGWaveSampleFormat(this.value);

  static GGWaveSampleFormat fromValue(int value) => switch (value) {
    1 => SAMPLE_FORMAT_U8,
    2 => SAMPLE_FORMAT_I8,
    3 => SAMPLE_FORMAT_U16,
    4 => SAMPLE_FORMAT_I16,
    5 => SAMPLE_FORMAT_F32,
    _ => throw ArgumentError("Unknown value for GGWaveSampleFormat: $value"),
  };
}

/// Operating modes
enum GGWaveOperatingMode {
  OPERATING_MODE_RX(2),
  OPERATING_MODE_TX(4),
  OPERATING_MODE_RX_AND_TX(6);

  final int value;
  const GGWaveOperatingMode(this.value);

  static GGWaveOperatingMode fromValue(int value) => switch (value) {
    2 => OPERATING_MODE_RX,
    4 => OPERATING_MODE_TX,
    6 => OPERATING_MODE_RX_AND_TX,
    _ => throw ArgumentError("Unknown value for GGWaveOperatingMode: $value"),
  };
}

/// Instance handle
typedef GGWaveInstance = ffi.Int32;
typedef DartGGWaveInstance = int;
